--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,4 +1,7 @@
 Title: History
 
+- 2012-08-21:
+	- Released version 1.04, now LogMore works with PHP 5.2 too
+
 - 2012-08-20:
 	- Released version 1.0
