Cleaned up, added .gitignore

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,20 +1,14 @@
 Title: History
 
 - v0.8.2 released on 2012-09-04
-
 	- LOG_PERROR was added to the default logging options
 	- Added README and HISTORY in Markdown-Syntax
-
-
+	- Added .gitignore-file
 - v0.8.1 released on 2012-08-23
-
 	- Renamed final output-file logmore.php to LogMore.php
 		to ease usage of __autoload with this class
 	- Added STATUS.md
-
-
 - v0.8.0 released on 2012-08-21
-
 	- Removed failed tags v1.0, v1.04
 	- Released version 0.8.0 to conform versioning to packagist
 	- Bugfixed handling of NULL-values when formating messages
