--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,5 +1,7 @@
 Title: History
 
+- v0.8.3 released on 2012-09-06
+	- Added autoload-functionality for packagist to composer.json
 - v0.8.2 released on 2012-09-04
 	- LOG_PERROR was added to the default logging options
 	- Added README and HISTORY in Markdown-Syntax
