--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,6 @@
 Title: History
 
-- v0.8.4, not yet released
+- v0.8.4, released on 2012-09-14
 	- Bugfixed invalid usage of trigger_error()
 - v0.8.3 released on 2012-09-06
 	- Added autoload-functionality for packagist to composer.json
